[package]
name = "l2book-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/m4ce/l2book-rs"
description = "A fast and efficient L2 book implementation"
keywords = ["book"]
categories = ["md"]

[features]
linear_search_policy = []

[dependencies]
derivative = "2.2.0"
log = "0.4.20"

[profile.release]
lto = true
