[package]
name = "l2book-rs"
version = "0.0.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/m4ce/l2book-rs"
description = "A fast and efficient L2 book implementation"
keywords = ["book"]
categories = ["md"]

[features]
linear_search_policy = []

[dependencies]
derivative = "2.2.0"
log = "0.4.20"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "large_book"
harness = false

[profile.release]
lto = true
