[package]
name = "l2book-rs"
version = "0.0.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/m4ce/l2book-rs"
description = "A fast and efficient L2 book implementation"
keywords = ["book"]
categories = ["md"]

[features]
default = ["linear_search_policy"]
binary_search_policy = []
linear_search_policy = []

[dependencies]
derivative = "2.2.0"
log = "0.4.20"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
simplerand = "1.3.0"

[[bench]]
name = "book"
harness = false

[profile.release]
opt-level = 3
debug = false
lto = true

[profile.bench]
opt-level = 3
debug = false
lto = true
